# task_manager_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: __main__.py  app.py  worker.py
app/configs/: Database.py  Loger.py  Settings.py
app/metadata/: errors.py
app/models/: db_models.py
app/repositories/: TaskRepo.py
app/routers/: TaskRouter.py
app/schemas/: TaskSchemas.py
app/services/: TaskService.py
app/utils/: CVManager.py
